--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Own project stuff
+# ESNURE YOU DOWNLOAD /DATAR/release_related/ yourself!
+.idea
+/DATAR/__MACOSX/
+/DATAR/release_related/
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
