Squashed commit of the following:
commit 4873a898e9a9c077ff8642ea271c34f31a058806
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Fri Feb 7 18:53:46 2025 +0100

    renamed /q1 to /q2

commit 8d3982ee1391424022a85a0b81f9f55381378fdb
Author: Jarno van Tilt <jarnovantilt@gmail.com>
Date:   Mon Feb 3 15:23:11 2025 +0100

    Last changes to analysis of Q1

commit 09c12cd5c933116b954ea9a2d77af15632f72a02
Merge: a47d9ef 380d29f
Author: Jarno van Tilt <jarnovantilt@gmail.com>
Date:   Sun Feb 2 10:50:40 2025 +0100

    Merge branch 'Jarno' of https://github.com/Thais02/EMSE24 into Jarno

commit a47d9ef504eb7cb8f4de1c14e5fd26ad60109659
Author: Jarno van Tilt <jarnovantilt@gmail.com>
Date:   Sun Feb 2 10:49:31 2025 +0100

    Regression Discontinuity + associated date

commit 380d29f93d0bf87c907bbb35eb873b1d0f038c59
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sun Feb 2 10:03:58 2025 +0100

    add print cwd

commit d9cefa34da800f49017df874698879ee66456f63
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sun Feb 2 09:57:32 2025 +0100

    print resolved JSON_ROOT path

commit 0639264f3845bd56d2b670965c917a0fcbbb3a15
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sun Feb 2 00:30:07 2025 +0100

    Only pick _best_version that appears in df_json instead of only df_reviews

commit fd31b6b1c85aa7e5878d15e9624bdca52244c96f
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sat Feb 1 23:59:08 2025 +0100

    Fixed many bugs in release_selector

commit 6e1995e1a2645d9164d0910b5c2a85ca10fd2f63
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sat Feb 1 20:12:06 2025 +0100

    before/after check

commit 8b7b19c4230ad24f187149e7ed61250d41bdc514
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sat Feb 1 19:57:44 2025 +0100

    Star Wars Episode VI: Return of the DELTADAYS check

commit 7fd23575d24dbf979188d65310dff0fddd8d52dc
Author: Thijs Blom <git@thijsblom.xyz>
Date:   Sat Feb 1 16:17:32 2025 +0100

    fix for invalid float conversions

commit afec7b2931c6c27106acbc5e4f179fc6938dbd05
Autho

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /DATAR/__MACOSX/
 /DATAR/release_related/
 .DS_Store
+/q1/plots/
+/supplementary_data
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
