--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Own project stuff
-# ESNURE YOU DOWNLOAD /DATAR/release_related/ yourself!
+# ENSURE YOU DOWNLOAD /DATAR/release_related/ yourself!
 .idea
 /DATAR/__MACOSX/
 /DATAR/release_related/
